test/sema/typeck/trait/generic-assoc-type-bound-not-satisfied.dora
trait Printable {
    fn print(): String;
}

trait Container {
    type Item[T: Printable];
}

class Foo

impl Container for Foo {
    type Item[T] = Option[T];
}
